--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -1,39 +1,26 @@
 silhouette {
 
-  # Authenticator settings
-  authenticator.cookieName="authenticator"
-  authenticator.cookiePath="/"
-  authenticator.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
-  authenticator.httpOnlyCookie=true
-  authenticator.useFingerprinting=true
-  authenticator.authenticatorIdleTimeout=30 minutes
-  authenticator.authenticatorExpiry=12 hours
+  jwt.authenticator.headerName="X-Auth-Token"
+  jwt.authenticator.issuerClaim="PlaySilhouetteRest"
+  jwt.authenticator.encryptSubject=true
+  jwt.authenticator.authenticatorExpiry=12 hours
+  jwt.authenticator.sharedSecret="changeme"
 
-  authenticator.rememberMe.cookieMaxAge=30 days
-  authenticator.rememberMe.authenticatorIdleTimeout=5 days
-  authenticator.rememberMe.authenticatorExpiry=30 days
+  jwt.authenticator.rememberMe.authenticatorExpiry=30 days
+  jwt.authenticator.rememberMe.authenticatorIdleTimeout=5 days
 
-  authenticator.cookie.signer.key = "[changeme]" // A unique encryption key
-  authenticator.crypter.key = "[changeme]" // A unique encryption key
+  jwt.authenticator.crypter.key = "[changeme]" // A unique encryption key
 
-  # OAuth1 token secret provider settings
-  oauth1TokenSecretProvider.cookieName="OAuth1TokenSecret"
-  oauth1TokenSecretProvider.cookiePath="/"
-  oauth1TokenSecretProvider.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
-  oauth1TokenSecretProvider.httpOnlyCookie=true
-  oauth1TokenSecretProvider.expirationTime=5 minutes
 
-  oauth1TokenSecretProvider.cookie.signer.key = "[changeme]" // A unique encryption key
-  oauth1TokenSecretProvider.crypter.key = "[changeme]" // A unique encryption key
+    # OAuth1 token secret provider settings
+    oauth1TokenSecretProvider.cookieName="OAuth1TokenSecret"
+    oauth1TokenSecretProvider.cookiePath="/"
+    oauth1TokenSecretProvider.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
+    oauth1TokenSecretProvider.httpOnlyCookie=true
+    oauth1TokenSecretProvider.expirationTime=5 minutes
 
-  # OAuth2 state provider settings
-  oauth2StateProvider.cookieName="OAuth2State"
-  oauth2StateProvider.cookiePath="/"
-  oauth2StateProvider.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
-  oauth2StateProvider.httpOnlyCookie=true
-  oauth2StateProvider.expirationTime=5 minutes
-
-  oauth2StateProvider.cookie.signer.key = "[changeme]" // A unique encryption key
+    oauth1TokenSecretProvider.cookie.signer.key = "[changeme]" // A unique encryption key
+    oauth1TokenSecretProvider.crypter.key = "[changeme]" // A unique encryption key
 
   # Facebook provider
   facebook.authorizationURL="https://graph.facebook.com/v2.3/oauth/authorize"
@@ -44,7 +31,6 @@ silhouette {
   facebook.clientSecret=""
   facebook.clientSecret=${?FACEBOOK_CLIENT_SECRET}
   facebook.scope="email"
-
   # Google provider
   google.authorizationURL="https://accounts.google.com/o/oauth2/auth"
   google.accessTokenURL="https://accounts.google.com/o/oauth2/token"
@@ -102,4 +88,24 @@ silhouette {
     "image": "http://axschema.org/media/image/default"
   }
   yahoo.realm="http://localhost:9000"
-}
+  }
+
+
+
+  # Authenticator settings
+ # authenticator.cookieName="authenticator"
+  #authenticator.cookiePath="/"
+ # authenticator.secureCookie=false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
+ # authenticator.httpOnlyCookie=true
+#  authenticator.useFingerprinting=true
+ # authenticator.authenticatorIdleTimeout=30 minutes
+#  authenticator.authenticatorExpiry=12 hours
+
+ # authenticator.rememberMe.cookieMaxAge=30 days
+ # authenticator.rememberMe.authenticatorIdleTimeout=5 days
+ # authenticator.rememberMe.authenticatorExpiry=30 days
+
+ # authenticator.cookie.signer.key = "[changeme]" // A unique encryption key
+ # authenticator.crypter.key = "[changeme]" // A unique encryption key
+
+  # OAuth1 token secret provider settings
