--- a/activator.properties
+++ b/activator.properties
@@ -1,3 +1,7 @@
 # http://typesafe.com/activator/template/contribute
 name = play-silhouette-4.0.0-macwire
-title = The Play Silhouette Seed 4.0.0 using Macwire 
+title = The Play Silhouette Seed 4.0.0 using Macwire Project
+description =A template for an application which uses Silhouette v4.0.0 as authentication library using macwire.
+tags = seed, auth, oauth1, oauth2, openid, credentials, silhouette, authentication, scala, play,jwtAuthenticator,macwire.
+authorName = Vinay Bhagwat
+authorLink = https://github.com/Vinay-bhagwat
