--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,20 @@
+cache:
+  directories:
+    - $HOME/.m2/repository
+    - $HOME/.sbt
+    - $HOME/.ivy2
+
 language: scala
 
+script: 
+- sbt ++$TRAVIS_SCALA_VERSION compile test:compile
 
+scala:
+  - 2.10.4
+
+jdk:
+  - oraclejdk8
+  - openjdk8
 
 
 notifications:
